--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,7 @@ table {
 
 /* own css */
 body {
+  overflow: overlay;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
